--- a/html/public/articleDetail.html
+++ b/html/public/articleDetail.html
@@ -47,6 +47,9 @@
 					<div class="related-words">
 						<span>农科院</span><span>广西农业厅</span><span>科技厅</span>
 					</div>
+					<h6 class="copyright-explain">
+						本文章为网络抓取数据而来，不代表本厅的看法
+					</h6>
 					<div class="article-like-wrapper">
 						<div class="item like-wrapper">
 							<span class="mui-icon iconfont icon-zan like orange"></span>点赞
@@ -57,7 +60,7 @@
 					</div>
 				</div>
 				<div class="ad-wrapper">
-					<img src="../../images/ad.png" alt="" />
+					<img src="" alt="" />
 				</div>
 				<div class="related-article-wrapper">
 					<h5 class="text">猜你喜欢</h5>
@@ -73,8 +76,8 @@
 						</li>
 					</ul>
 				</div>
-
-				<div class="comment-wrapper">
+				<!--评论区暂关闭-->
+				<div class="comment-wrapper" style="display: none;">
 					<h5 class="text">
 							评论区
 						</h5>
@@ -136,7 +139,8 @@
 		</div>
 		<nav class="mui-bar mui-bar-footer mui-bar-tab comment-box">
 			<li class="mui-tab-item">
-				<input type="text" placeholder="我来评论一句" class="mui-input-clear write-comment" />
+				<!-- 评论区暂关闭 -->
+				<!--<input type="text" placeholder="我来评论一句" class="mui-input-clear write-comment" />-->
 			</li>
 			<li class="mui-tab-item collect-li">
 				<span class="mui-icon mui-icon-star orange collect"></span> 收藏
