--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 			mui('.mui-bar-nav').on('tap', '.publish-story', function(){
 				var state = JSON.parse(localStorage.getItem("$state"));
 				if(!state || !state.userId){
-					mui.toast('请先登录');
+					plus.nativeUI.toast('请先登录', {verticalAlign: "center"});
 					return ;
 				}
 				var w = plus.webview.create('./html/scientistStory/publish.html', 'publish.html');
